# what flags you want to pass to the C compiler & linker
CFLAGS = -O3 
CXXFLAGS = -O3 -std=gnu++11
#LIBS = -lz -lreadline -lcurses -lhistory -lintl
LIBS = -lz -lreadline -lcurses -lhistory $(INTLLIBS)
LDFLAGS = -static-libstdc++ -static-libgcc

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
BUILT_SOURCES = cdlParser.hh stack.hh position.hh location.hh
AM_YFLAGS = -d -Wno-yacc
bin_PROGRAMS = cvc-rv
cvc_SOURCES = cvc.cc Cvc.hh \
	cdlParser.yy cdlScanner.ll \
	stack.hh position.hh location.hh \
	CCdlParserDriver.cc CCdlParserDriver.hh \
	CCircuit.cc CCircuit.hh \
	CCondition.cc CCondition.hh \
	CConnection.cc CConnection.hh \
	CConnectionCount.cc CConnectionCount.hh \
	CCvcDb.cc CCvcDb.hh \
	CCvcDb_error.cc CCvcDb_init.cc CCvcDb_interactive.cc \
	CCvcDb_main.cc CCvcDb_print.cc CCvcDb_utility.cc \
	CCvcParameters.cc CCvcParameters.hh \
	CDevice.cc CDevice.hh \
	CEventQueue.cc CEventQueue.hh \
	CFixedText.cc CFixedText.hh \
	CInstance.cc CInstance.hh \
	CModel.cc CModel.hh \
	CNormalValue.cc CNormalValue.hh \
	CParameterMap.cc CParameterMap.hh \
	CPower.cc CPower.hh \
	CSet.cc CSet.hh \
	CvcMaps.cc CvcMaps.hh \
	CVirtualNet.cc CVirtualNet.hh \
	CCvcExceptions.hh CDependencyMap.hh CvcTypes.hh \
	exitfail.c exitfail.h \
	gzstream.C gzstream.h \
	obstack.c obstack.h \
	resource.cc resource.hh \
	utility.cc utility.h \
	readline.h exit.h gettext.h \
    mmap_access_mode.h mmap_allocator.h mmap_exception.h \
    mmap_file_pool.cpp mmap_file_pool.h mmappable_vector.h

# C++ header files generated by bison, in addition to cdlParser.hh. 
# Since automake does not know how to make them, add same rule as cdlParser.hh
stack.hh position.hh location.hh: cdlParser.yy
	$(AM_V_YACC)$(am__skipyacc) $(SHELL) $(YLWRAP) $< y.tab.c $(<:%.yy=%.cc) y.tab.h `echo $(<:%.yy=%.cc) | $(am__yacc_c2h)` y.output $*.output -- $(YACCCOMPILE)
